# nats-jetstream-manager

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  NATS_CLI.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  Makefile  README.md  UV_MIGRATION.md  UV_SETUP.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  connection_manager.py  db.py
backend/app/models/: __init__.py  audit.py  health.py  job.py  metrics.py  schemas.py  user.py
backend/app/services/: audit_service.py  auth_service.py  cluster_service.py  consumer_service.py  health_service.py  job_service.py  message_service.py  metrics_service.py  stream_service.py  system_service.py
backend/data/: nats_manager.db
backend/scripts/: dev.sh
backend/src/: app.module.ts  main.ts
backend/src/audit/: audit.controller.ts  audit.module.ts  audit.service.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  invites.controller.ts
backend/src/cluster/: cluster.controller.ts  cluster.service.ts
backend/src/connections/: connections.controller.ts  connections.module.ts  connections.service.ts
backend/src/consumers/: consumers.controller.ts  consumers.module.ts  consumers.service.ts
backend/src/health-history/: health-history.controller.ts  health-history.module.ts  health-history.service.ts
backend/tests/: test_api.py
(+144 files in other folders)
